# ChangeLog for sys-apps/calculate-install
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-2.2.0.0_p20100816-r1 (18 Aug 2010)

  18 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100816.ebuild,
  +calculate-install-2.2.0.0_p20100816-r1.ebuild:
  Added depends.

*calculate-install-2.2.0.0_p20100816 (16 Aug 2010)

  16 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.0.0_p20100816.ebuild:
  New live ebuild from 2010/08/16.

*calculate-install-2.2.0.0_p20100812 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100811-r2.ebuild,
  +calculate-install-2.2.0.0_p20100812.ebuild:
  Update live ebuild from 12/08/2010.

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.0.0_p20100811-r1.ebuild,
  calculate-install-2.2.9999.ebuild:
  Remove auto runlevel boot for calculate daemon.

*calculate-install-2.2.0.0_p20100811-r1 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100811.ebuild,
  +calculate-install-2.2.0.0_p20100811-r1.ebuild:
  New revision for bugfix devfrom detect by calculate.ini.

*calculate-install-2.2.0.0_p20100811 (11 Aug 2010)

  11 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.0.0_p20100811.ebuild:
  Add live ebuild from 11/08/2010.

  20 Jul 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.9999.ebuild:
  Change calculate runlevel from default to boot

  20 Jul 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.9999.ebuild:
  Add starting calcualte to default runlevel.

  22 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.9999.ebuild:
  Change lib version depend.

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.9999.ebuild:
  Fix git path.
