@@ -4,6 +4,6 @@
 ~sys-apps/calculate-install-2.2.0.0_p20100812 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100813 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100812 amd64 x86
-~sys-apps/calculate-install-2.2.0.0_p20100816 amd64 x86
+~sys-apps/calculate-install-2.2.0.0_p20100817 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100816 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100816 amd64 x86
