@@ -1,5 +1,5 @@
 EBUILD calculate-install-2.2.0.0_p20100812-r1.ebuild 516 RMD160 f68ffc6639ef15d4fee8c820e40ed38c25ad0a24 SHA1 5fbc5821ff69b54f7ea946ee1f84684a97c6b4a3 SHA256 71aa21a9bbc33a77fdeae0f9440a994e1bcedf4904afca2c30e32619ed2c7ea8
-EBUILD calculate-install-2.2.0.0_p20100816-r1.ebuild 570 RMD160 ef7df52391e65e319424669d79f958120b5b923f SHA1 4a8dfe21dfc43c69215f15b524bd5608cdef0a6f SHA256 e9c4add96b8443b3a0d1d3a6609743aa3e7c37911fa5e5973763baa26e3bfa1a
+EBUILD calculate-install-2.2.0.0_p20100817.ebuild 587 RMD160 4fb5cc75cb486d4c540583c622f9d79176af20f8 SHA1 b52681582744d9b53c80b966f8c0d8e750c6a432 SHA256 0ef1762953f3f8bbfd46c66d2d9962a40a0a6edf52cee5ca0d41a214f87ddad9
 EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
-MISC ChangeLog 2164 RMD160 8c91aa8171ad94337e3ca5f8d310a173b012f203 SHA1 53a7a76225e6a1cf4ac0d582c853bb1a447fbf5a SHA256 4b2378ffa2a52a3fc7b12503831ea47bfab686752e61323ec6cc6a2b92e07f9a
+MISC ChangeLog 2396 RMD160 6ed9ad72a0645c772432c0caa345febbd24bc0ae SHA1 3b55c4e199fafd2bf4208e91e7a28e1db38e1ea4 SHA256 f244dacabfdfb58604f9d2bb7bcb1df359e6db4376cd7a0dcc033d163f632e5e
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
