@@ -6,7 +6,7 @@ EAPI="2"
 
 inherit distutils git
 
-EGIT_COMMIT="d0464cb1a098ae08816c71037e6592b031f43fca"
+EGIT_COMMIT="59b9b89481648545f5dc747f04e218d0c5e6f4d8"
 EGIT_REPO_URI="git://git.calculate.ru/calculate-install.git"
 
 DESCRIPTION="The program of installation Calculate Linux"
@@ -18,6 +18,7 @@ KEYWORDS="~amd64 ~x86"
 DEPEND="~sys-apps/calculate-lib-2.2.0.0_p20100816
 	app-portage/layman
 	sys-boot/grub
-	sys-fs/dosfstools"
+	sys-fs/dosfstools
+	sys-apps/parted"
 
 RDEPEND="${DEPEND}"
